--- a/cycloid.UWP/Assets/StreetView.html
+++ b/cycloid.UWP/Assets/StreetView.html
@@ -21,11 +21,20 @@
             panorama = new google.maps.StreetViewPanorama(
                 document.getElementById("street-view"),
                 {
-                    position: { lat: 45.81323, lng: 11.77051 },
-                    pov: { heading: 165, pitch: 0 },
                     zoom: 1,
-                },
+                    addressControl: true,
+                    imageDateControl: true,
+                    panControl:false,
+                    fullscreenControl: false,
+                    linksControl: false,
+                    zoomControl: false
+                }
             );
+        }
+
+        function setLocation(latitude, longitude, heading) {
+            panorama.setPosition({ lat: latitude, lng: longitude });
+            panorama.setPov({ heading: heading, pitch: panorama.getPov().pitch });
         }
 
         window.initialize = initialize;
